# config-drift

./: .coverage  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
config_drift/: __init__.py  __main__.py  cli.py  detector.py  models.py  parsers.py  reporters.py
config_drift/cli/: __init__.py  main.py
config_drift/cli/commands/: baseline.py  compare.py  report.py  scan.py
config_drift/detectors/: __init__.py  base.py  basic.py  semantic.py
config_drift/models/: __init__.py  config.py  drift.py  scan.py
config_drift/parsers/: __init__.py  base.py  docker_compose.py  file.py  helm.py  kubernetes.py  terraform.py
config_drift/storage/: __init__.py  duckdb_store.py  file_store.py
tests/: test_basic_detector.py  test_cli_baseline.py  test_cli_compare.py  test_cli_report.py  test_cli_scan.py  test_config_models.py  test_detector.py  test_docker_compose_parser.py  test_drift_models.py  test_duckdb_store.py  test_file_parser.py  test_file_store.py  test_helm_parser.py  test_kubernetes_parser.py  test_models.py  test_parsers.py  test_reporters.py  test_semantic_detector.py  test_terraform_parser.py
