[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "config-drift"
version = "0.1.0"
description = "Configuration drift detector for Kubernetes, Docker Compose, Terraform, and Helm"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [{name = "jlaportebot"}]
keywords = ["config", "drift", "kubernetes", "docker", "terraform", "helm", "devops", "infrastructure"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
]
dependencies = [
    "click>=8.1",
    "rich>=13.7",
    "pyyaml>=6.0",
    "httpx>=0.27",
]

[project.scripts]
config-drift = "config_drift.cli:main"

[dependency-groups]
dev = [
    {include-group = "lint"},
    {include-group = "test"},
    {include-group = "typecheck"},
]
lint = ["ruff>=0.6.0"]
test = ["pytest>=8.0.0", "pytest-cov>=5.0.0", "pytest-mock>=3.12.0"]
typecheck = ["ty>=0.0.50"]

[project.urls]
Homepage = "https://github.com/jlaportebot/config-drift"
Repository = "https://github.com/jlaportebot/config-drift"
Issues = "https://github.com/jlaportebot/config-drift/issues"

[tool.ruff]
line-length = 100
target-version = "py311"
preview = true

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "C4", "PTH"]
ignore = [
    "D", "COM812", "ISC001", "PLR0913", "TRY003", "PLR0917", "PLR0915",
    "FBT001", "DOC501", "PLW0717", "PLC0415", "B904",
    "RUF003", "RUF002", "PLR2004", "C901", "PLR0912", "PLR0914",
    "SIM108", "DTZ001", "PLR6104", "UP045", "UP035", "UP006", "UP007",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "S101", "ANN201", "ANN001", "PLR6301", "PLR2004",
    "PLC1901", "F401", "INP001", "S105", "PLC2701", "DTZ001",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "--cov=config_drift",
    "--cov-report=term-missing",
    "--cov-fail-under=70",
    "-v",
]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.ty.terminal]
error-on-warning = true

[tool.ty.environment]
python-version = "3.11"

[tool.ty.rules]
possibly-unresolved-reference = "error"
unused-ignore-comment = "warn"