[project]
name = "config-drift"
version = "0.1.0"
description = "Configuration drift detector for Kubernetes, Docker Compose, Terraform, and Helm"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "jlaportebot", email = "jlaportebot@gmail.com"}]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "click>=8.1",
    "pyyaml>=6.0",
    "pydantic>=2.7",
    "rich>=13.7",
    "docker>=7.0",
    "kubernetes>=30.0",
    "python-terraform>=0.10",
    "pyhelm3>=0.2",
    "duckdb>=1.0",
    "python-hcl2>=8.1.2",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "ty>=0.0.51",
    "pip-audit>=2.7",
]
test = ["pytest>=8.0", "pytest-cov>=5.0"]
lint = ["ruff>=0.5", "ty>=0.0.51"]
audit = ["pip-audit>=2.7"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["ALL"]
ignore = ["D", "COM812", "ISC001", "PLR0913", "PLR0915", "PLR0917", "FBT001", "DOC501", "PLW0717", "PLC0415", "B904", "RUF003", "RUF002", "PLR2004", "C901", "PLR0912", "PLR0914", "SIM108", "DTZ001", "PLR6104", "UP045", "UP035", "UP006", "UP007"]
[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "ANN201", "ANN001", "PLR6301", "PLR2004", "PLC1901", "F401", "INP001", "S105", "PLC2701", "DTZ001", "FBT003", "S108"]

[tool.pytest.ini_options]
addopts = "-v --cov=config_drift --cov-report=term-missing --cov-fail-under=80"
testpaths = ["tests"]

[tool.ty.environment]
python-version = "3.11"

[tool.ty.terminal]
error-on-warning = true
